<resources>
    <!-- About App -->
    <string name="app_name">Le Wind</string>
    <string name="creator">Janis M. Baumann</string>
    <string name="data_provider"><a href="https://lewind.ch/">lewind.ch</a></string>
    <string name="email"><a href="mailto:janis.baumann@gmail.com">janis.baumann@gmail.com</a></string>
    <!-- Symbols and Units -->
    <string name="not_found_symbol">-</string>
    <string name="wind_unit"> kts</string>
    <string name="temp_unit"> °C</string>
    <string name="hum_unit"> %</string>
    <string name="preassure_unit"> hPa</string>
    <string name="direction_unit"> °</string>
    <!-- Toasts -->
    <string name="invalid_id">Invalid Station ID</string>
    <string name="station_download_failed">Faild to Download Data</string>
    <string name="station_info_fail">Failed to get Station Infos</string>
    <string name="all_stations_fail">Failed to get Stations</string>
    <!-- Labels -->
    <string name="label_temperature">Temperature</string>
    <string name="label_wind">Wind Speed</string>
    <string name="label_gust">Wind Gusts</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_preassure">Pressure</string>
    <string name="label_direction">Wind Direction</string>
    <string name="label_last_update">Last Updated:</string>
    <string name="label_version">Version</string>
    <string name="label_creator">Creator</string>
    <string name="label_data_provider">Webpage</string>
    <string name="label_email">Email Address</string>
    <string name="label_no_longer_supported">This App is no longer supported. You can use the Web-Version <a href="https://lewind.ch/">lewind.ch</a> instead.</string>
    <!-- Dialog -->
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_delete_text">Delete</string>
    <string name="dialog_edit_text">Rename</string>
    <string name="dialog_wait_text">Loading Resources</string>
    <!-- Activity Title -->
    <string name="activity_title_edit">Edit Stations</string>
    <string name="activity_title_find">Find Stations</string>
    <!-- Other -->
    <string name="last_updated_minutes">%1$s ago</string>
    <string name="btn_add_station">Click on Station</string>
    <!-- Dropdown Menu -->
    <string-array name="times_array">
        <item name="dropdown_6h" value="6">last 6h</item>
        <item name="dropdown_12h" value="12">last 12h</item>
        <item name="dropdown_24h" value="24">last 24h</item>
        <item name="dropdown_48h" value="48">last 48h</item>
    </string-array>
</resources>