<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/backWind"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDirection">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/labelWindspeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_wind"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:id="@+id/tvWindspeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_found_symbol"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/backGust"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDirection">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/labelGusts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_gust"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:id="@+id/tvGusts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_found_symbol"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backGust">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/labelPreassure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_preassure"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:id="@+id/tvPreassure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_found_symbol"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imgNESW"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_marginTop="32dp"
                android:contentDescription="outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/compass_outside" />

            <TextView
                android:id="@+id/tvDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/not_found_symbol"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgNESW" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@+id/backWind">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/labelHum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_humidity"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:id="@+id/tvHum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_found_symbol"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backWind">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/labelTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_temperature"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:id="@+id/tvTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_found_symbol"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imgRose"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:contentDescription="rose"
                android:rotation="0"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/imgNESW"
                app:layout_constraintEnd_toEndOf="@+id/imgNESW"
                app:layout_constraintStart_toStartOf="@+id/imgNESW"
                app:layout_constraintTop_toTopOf="@+id/imgNESW"
                app:srcCompat="@drawable/compass_inside"
                tools:visibility="invisible" />

            <Space
                android:layout_width="0dp"
                android:layout_height="160dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="Reload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_rotate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="History"
        app:layout_constraintBottom_toTopOf="@+id/btnReload"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />

    <TextView
        android:id="@+id/labelUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/label_last_update"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/not_found_symbol"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelUpdate" />

</androidx.constraintlayout.widget.ConstraintLayout>